# S4R-Monsoon

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  analyze_errors.py  build_final_submission.py  check_conf.py  generate_phase1_probes.py  generate_phase2_probes.py  implementation_plan_for_krish.md  pyproject.toml  run_route_b.py  task.md  update_phase1_scores.py  update_phase2_scores.py  validate_priors.py
data/: README.md
data/processed/: village_features.csv
data/weak_labels/: TEMPLATE.csv
docs/: methodology.md
docs/compliance/: provenance.md
docs/olmoearth/: notes.md  olmoearth_integration_guide.md  olmoearth_use_guide.md
experiments/: run_diagnostics.py
experiments/diagnostics/: isolation_summary.md  route_a_feature_correlation.csv
experiments/probing/: generate_probes.py  generate_task1_probes.py  phase_summary.md  probe_queue.csv  probe_results.csv  submission_corrected_v1.csv  submission_log.md  submission_probe_01_25_Groundnut.csv  submission_probe_02_25_Cotton.csv  submission_probe_03_25_Rice.csv  submission_probe_04_25_Bajra.csv  submission_probe_05_25_Maize.csv  submission_probe_06_27_Groundnut.csv  submission_probe_07_27_Cotton.csv  submission_probe_08_27_Rice.csv  submission_probe_09_27_Bajra.csv  submission_probe_10_27_Maize.csv  submission_probe_11_12_Groundnut.csv  submission_probe_12_12_Cotton.csv  submission_probe_13_15_Groundnut.csv  submission_probe_13_1_Rice.csv  submission_probe_14_15_Rice.csv  submission_probe_14_1_Cotton.csv  submission_probe_15_18_Groundnut.csv  submission_probe_15_1_Maize.csv  submission_probe_16_18_Rice.csv  submission_probe_16_1_Bajra.csv  submission_probe_17_1_Groundnut.csv  submission_probe_18_12_Rice.csv  submission_probe_19_12_Maize.csv  submission_probe_20_12_Bajra.csv  submission_probe_21_29_Groundnut.csv  submission_probe_22_29_Cotton.csv  submission_probe_23_29_Bajra.csv  submission_probe_24_11_Groundnut.csv  (+2 more)
outputs/: submission.csv  submission_routeC_anchored.csv
src/s4r/: cli.py  (+1 more)
tests/: test_baseline.py  test_cli.py  test_config.py  test_coverage.py  test_extract.py  test_extract_integration.py  test_head.py  test_import.py  test_ingest.py  test_losses.py  test_route_a.py  test_route_a_integration.py  test_route_b.py  test_submission.py  test_synthetic.py  test_train.py  test_weak_labels.py
(+21 files in other folders)
