[project]
name = "s4r"
version = "0.1.0"
description = "ANRF AISEHack 2026 SAR crop mapping — Phase 2: LLP + foundation model"
requires-python = ">=3.12"
dependencies = ["numpy>=1.26", "scipy>=1.12", "pandas>=2.2"]

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/s4r"]
