[project]
name = "s4r"
version = "0.1.0"
description = "ANRF AISEHack 2026 SAR crop mapping — Phase 2: LLP + foundation model"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "pandas>=2.2",
    "rasterio>=1.3",
    "geopandas>=1.0",
    "shapely>=2.0",
]

[dependency-groups]
dev = ["pytest>=8"]
# Route A/B only — Route C must stay importable and green without this group.
route-a = [
    "torch>=2.4",
    "olmoearth-pretrain-minimal",
    "pystac-client>=0.8",
    "planetary-computer>=1.0",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    # rasterio-internal boundless reads trip a NumPy 2.5 deprecation; not ours
    "ignore:Setting the shape on a NumPy array:DeprecationWarning",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/s4r"]
